# machine-learning

./: .gitignore  LICENSE  README.md  classification-newsgroup-dataset.ipynb  hindi-digit-recognition.ipynb  intent-classification.ipynb  pyproject.toml  requirements.txt  requirements_m1.txt
assignments/: cap6610-hw3-q4-mnist-svm.ipynb  cap6610-hw4-q3.ipynb
blog/: 1-sample-size-magic-10.ipynb
data/: .gitignore  readme.md
data_science/: 1-data-analysis-101.ipynb  4-da101-data-transformation.ipynb  data-analysis-101.ipynb
machine_learning/: 1.0-mean-absolute-error.ipynb  1.1-mean-squared-error.ipynb  1.2-root-mean-squared-error.ipynb  1.3-r2-score.ipynb  2.0-linear-regression.ipynb
mathematics/: README.md  linalg1_vectors.ipynb  linalg2_matrices.ipynb  linalg3_determinants.ipynb  linalg4_inverse.ipynb  linalg_least_squares.ipynb  numpy-practice.ipynb  stats.py  stats101-descriptive.ipynb  stats101-inferential.ipynb  stats101.ipynb  stats102-similarity-and-correlation.ipynb  stats102.ipynb  stats103-central-limit-theorem.ipynb
models/hindi_mnist/: classes.pickle  model.h5
models/intent/: custom_objects.pickle  custom_stopwords.pickle
models/mnist/: values.pickle
projects/: classification-newsgroup-dataset.ipynb  dataset-visualizations.ipynb  hindi-digit-recognition.ipynb  intent-classification.ipynb  pkmn-ask-em-all-rag-guide.ipynb  retrieval-augmented-fantasy.ipynb
projects/distributions_dataset/: README.md  analyze_poisson.py  process-compile-sources.ipynb  (+1 more)
snippets/: load_font.py
visualization/: fonts.ipynb  line_plots.ipynb  misc.ipynb
(+12 files in other folders)
