[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "mlflow>=2.21.3",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "pyfonts>=0.0.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
