[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.32",
    "mlflow>=2.21.3",
    "nbformat>=5.10.4",
    "orjson>=3.10.16",
    "plotly>=6.0.1",
    "pyfonts>=0.0.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
